--- a/bridge_home_page.html
+++ b/bridge_home_page.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bridge School of English</title>
+    <title>Bridge School of English demo</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
