Facebook link update

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li class="list-inline-item">
-                            <a href="https://www.facebook.com/BridgeSchoolEthiopia/">
+                            <a href="https://www.facebook.com/BridgeSchoolEthiopia/" target="_blank">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                         </li>
