--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bridge School of English demo</title>
+    <title>Bridge School of Languages</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Bridge School of English</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Bridge School of Languages</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -61,8 +61,8 @@
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Bridge School!</div>
-                <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+                <div class="intro-lead-in">Welcome To Bridge School of Languages!</div>
+                <div class="intro-heading text-uppercase">WE HAVE PASSION FOR LANGUAGES!!</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
             </div>
         </div>
@@ -74,33 +74,64 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">What you would get at Bridge.</h3>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h3>About Our Language Courses</h3>
+                    <P>
+                        Bridge School of Languages offer different language courses that are interestingly delivered by professional teachers who are native speakers of the language targeted by customers.
+                        We provide both local and foreign languages to our students efficiently and effectively. Our curriculum focuses on reading, writing, vocabulary building, listening and speaking skills. We have an interactive teaching method that allows students develop their communicative skill in a fair amount of time.
+                        Bridge has four different class structures along with different time and price package that can easily allow students to choose the type of class they prefer, the time schedule that suits them with a price package they can afford.
+                    </P>
+                    <h3>List of Our Language Courses</h3> 
+                    <p>
+                        ~English: General English, English for Email, Academic English, Business English, English for Hospitality <br>
+                        ~French <br>
+                        ~Amharic <br>
+                        ~Afan-Oromo <br>
+                        ~Tigrigna <br>
+                        ~Exam Preparation Programs (IELTS, SAT, TOEFL) <br>
+                        ~Junior Programs: Reading Challenge Programs
+                    </p>
+
+                </div>
+                <div class="col-lg-6">
+                    <h3>Bridge’s four different Class Structure</h3>
+                    <P>
+                        <strong>1)Personal Class: </strong> -a one-to-one class structure where an individual student and a teacher communicate directly and attend in the learning and teaching process.
+                        -Personal classes are highly recommended for people who’d like to customize their schedules. It’s also convenient for people who prefer direct communication with their teacher and seek for special attention. People with a tight schedule and a busy life style usually find this class very suitable.
+                        <br> <strong>2)Group Class: </strong>-a class of minimum six and maximum twenty students and is a highly recommended form of language class since its interactive and helps students develop their communicative skill in an adequate amount of time. Group classes are diverse since different people from different places attend them and this creates a nice , vibrant atmosphere where people can actively learn.It’s provided three times a week (Mondays, Wednesdays and Fridays) for one and a half hour a day .
+                        <br> <strong>3)Small Groups: </strong> -gatherings of minimum three and maximum five students and are preferable for people who enjoy learning in a less crowded atmosphere and for group of friends, families or colleagues who’d like to learn a new language together.
+                        <br> <strong>4)Online Classes: </strong> - a class held online using virtual learning methods. It allows students to learn from where they are without having to come to school. It’s a very convenient method nowadays due to people’s tight schedule and recently due to the pandemic.
+                        </P>
+                </div>
+            </div>
+            <div class="row text-center" style="margin-top: 30px;">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fab fa-accusoft fa-stack-1x fa-inverse"></i>
           </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Other Special Programs</h4>
+                    <p class="text-muted">Bridge offers exam preparation programs for IELTS, SAT, TOFEL and other national and international language exam taking students. We have teachers who are specifically qualified to train students and prepare them for the exams in the desired amount of time. Our school has recourses that students can use to prepare themselves and exercise what they learn through previous exam books.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-child fa-stack-1x fa-inverse"></i>
           </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Junior Programs </h4>
+                    <p class="text-muted">Junior programs are meant for students in the age range of (5-15). This program helps kids attend language classes and activities such as “The Reading Challenge “and other different interesting activities for children. It’s held during the summer and it helps children to learn different languages and explore their hobbies and talents through different writing, reading, acting, singing and drawing sessions along the way.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fab fa-buffer fa-stack-1x fa-inverse"></i>
           </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Bridge offers </h4>
+                    <p class="text-muted">five level classes to provide a better learning / teaching atmosphere and a class that perfectly suits every student. After taking a placement test, students’ level can easily be determined and we can classify them as a beginner, elementary, per-intermediate, intermediate or as an advanced student in the language they’ve chosen to learn.</p>
                 </div>
             </div>
         </div>
@@ -210,7 +241,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Bridge School of English.</h3>
+                    <h3 class="section-subheading text-muted">Bridge School of Languages.</h3>
                 </div>
             </div>
             <div class="row">
@@ -222,11 +253,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
+                                    <h4>Since 2015</h4>
                                     <h4 class="subheading">Our Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Since 2015 our school has been giving different language courses with a curriculum that helped students communicate effectively and grow passion for languages. Throughout the years, Bridge has been offering variety of language courses and special programs designed for both children and adults.</p>
                                 </div>
                             </div>
                         </li>
@@ -236,11 +267,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4 class="subheading">Everything we provide.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Bridge offer programs and courses in English, Amharic, French and many other local and foreign languages. The school gives variety of English courses in Academic English, Business English, English for Email and more. There are also different exam preparation programs for IELTS, SAT, TOEFL and other national and international English exam taking students.</p>
                                 </div>
                             </div>
                         </li>
@@ -250,11 +280,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4 class="subheading">We try and meet yuor needs.</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">People have different schedules and different amount of time available, so our school offers different forms of classes that enable customers to adjust and customize their schedules and effectively attend the courses.</p>
                                 </div>
                             </div>
                         </li>
@@ -264,11 +293,15 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4 class="subheading">Things You Should Know About Us</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+                                        - Our courses are effectively and efficiently provided. <br>
+                                        - Located on a superb area. <br>
+                                        - Our teachers are professionals and native speakers of customers’ target language. <br>
+                                        - We have a welcoming, warm atmosphere.
+                                   </p>
                                 </div>
                             </div>
                         </li>
@@ -298,7 +331,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-                        <h4>Kay Garland</h4>
+                        <h4>Yennefer</h4>
                         <p class="text-muted">Lead Designer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
@@ -322,8 +355,8 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
+                        <h4>Biruk</h4>
+                        <p class="text-muted">It Technician</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="#">
@@ -346,7 +379,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-                        <h4>Diana Pertersen</h4>
+                        <h4>Lina</h4>
                         <p class="text-muted">Lead Developer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
