--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
 
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 
 <body id="page-top">
@@ -50,7 +52,7 @@
                         <a class="nav-link js-scroll-trigger" href="#team">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                        <a class="nav-link js-scroll-trigger" href="#contact">Location</a>
                     </li>
                 </ul>
             </div>
@@ -401,11 +403,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -414,7 +416,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
+                    <h2 class="section-heading text-uppercase">Location</h2>
                     <h3 class="section-subheading text-muted">If you have any comments or questions, feel free to contact us.</h3>
                 </div>
             </div>
