--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-                        <h4>Biruk</h4>
-                        <p class="text-muted">It Technician</p>
+                        <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="">
+                        <h4>Abay</h4>
+                        <p class="text-muted">Manager</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="#">
@@ -461,7 +461,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; bridgeSchool.com 2019</span>
+                    <span class="copyright">Copyright &copy; www.bridgeschooloflanguages.com 2020</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
