--- a/index.html
+++ b/index.html
@@ -332,30 +332,6 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-                        <h4>Yennefer</h4>
-                        <p class="text-muted">Lead Designer</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="">
                         <h4>Abay</h4>
                         <p class="text-muted">Manager</p>
@@ -380,9 +356,33 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+                        <h4>Yennefer</h4>
+                        <p class="text-muted">Coordinater</p>
+                        <ul class="list-inline social-buttons">
+                            <li class="list-inline-item">
+                                <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-                        <h4>Lina</h4>
-                        <p class="text-muted">Lead Developer</p>
+                        <h4>Yodit</h4>
+                        <p class="text-muted">Coordinater</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="#">
