--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
                         <h4>Yennefer</h4>
-                        <p class="text-muted">Coordinater</p>
+                        <p class="text-muted">Customer Service Officer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="#">
@@ -382,7 +382,7 @@
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
                         <h4>Yodit</h4>
-                        <p class="text-muted">Coordinater</p>
+                        <p class="text-muted">Manager and Customer Service Officer</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="#">
