--- a/index.html
+++ b/index.html
@@ -417,11 +417,15 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">Location</h2>
+                    <p style="color: white; size: 20px;" class="text-left">
+                        Bridge School of languages is located on the road that leads form Megenagna to Gurd Shola right next to Ethio-Ceramics, on the ninth floor of Pecan Building.
+                        <br>-The area is surrounded by the hilltops of Megenagna which has given the place a fascinating view.
+                        <br>-Our office is located on the left corner of the building’s ninth floor next to LERSHA, (office No.-901A).
+                    </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form id="contactForm" name="sentMessage" novalidate="novalidate">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -434,12 +438,17 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13866.279729289066!2d38.85825469233924!3d9.021460347792008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b8684077ee86b%3A0xa55b31f34e8d360d!2sBridge%20School%20of%20English!5e0!3m2!1sen!2set!4v1609421087686!5m2!1sen!2set" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13866.279729289066!2d38.85825469233924!3d9.021460347792008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b85298476e141%3A0x54f9402a82bf76d4!2sPecan%20Building!5e0!3m2!1sen!2set!4v1609421289494!5m2!1sen!2set" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                         </div>
-                    </form>
+                        <div>
+                            <p style="color: white; size: 20px;">
+                                Do You Have More Questions?
+                                Dial on: +251-920-00-00-77
+                            </p>
+                        </div>
                 </div>
             </div>
         </div>
