--- a/index.html
+++ b/index.html
@@ -368,34 +368,17 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="">
-                        <h4>Abay</h4>
-                        <p class="text-muted">Manager</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </li>
-                        </ul>
+                        <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+                        <h4>Abayneh Haile</h4>
+                        <p class="text-muted">Director of Studies</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-                        <h4>Yennefer</h4>
+                        <h4>Yennefer Teferi</h4>
                         <p class="text-muted">Customer Service Officer</p>
-                        <ul class="list-inline social-buttons">
+                        <!-- <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
                                 <a href="#">
                                     <i class="fab fa-twitter"></i>
@@ -411,31 +394,14 @@
                                     <i class="fab fa-linkedin-in"></i>
                                 </a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-                        <h4>Yodit</h4>
-                        <p class="text-muted">Manager and Customer Service Officer</p>
-                        <ul class="list-inline social-buttons">
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </li>
-                        </ul>
+                        <h4>Yodit Gebeyehu</h4>
+                        <p class="text-muted">Customer Service Manager</p>
                     </div>
                 </div>
             </div>
