--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <h3>Bridge’s four different Class Structure</h3>
+                    <h3>Bridge’s four different Class Structures.</h3>
                     <P>
                         <strong>1)Personal Class: </strong> -a one-to-one class structure where an individual student and a teacher communicate directly and attend in the learning and teaching process.
                         -Personal classes are highly recommended for people who’d like to customize their schedules. It’s also convenient for people who prefer direct communication with their teacher and seek for special attention. People with a tight schedule and a busy life style usually find this class very suitable.
@@ -117,7 +117,7 @@
             <i class="fab fa-accusoft fa-stack-1x fa-inverse"></i>
           </span>
                     <h4 class="service-heading">Other Special Programs</h4>
-                    <p class="text-muted">Bridge offers exam preparation programs for IELTS, SAT, TOFEL and other national and international language exam taking students. We have teachers who are specifically qualified to train students and prepare them for the exams in the desired amount of time. Our school has recourses that students can use to prepare themselves and exercise what they learn through previous exam books.</p>
+                    <p class="text-muted">Bridge offers exam preparation programs for IELTS, SAT, TOFEL and other national and international language exam taking students. We have teachers who are specifically qualified to train students and prepare them for the exams in the desired amount of time. Our school has resourses that students can use to prepare themselves with exercise what they learn through previous exam books.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -133,7 +133,7 @@
             <i class="fab fa-buffer fa-stack-1x fa-inverse"></i>
           </span>
                     <h4 class="service-heading">Bridge offers </h4>
-                    <p class="text-muted">five level classes to provide a better learning / teaching atmosphere and a class that perfectly suits every student. After taking a placement test, students’ level can easily be determined and we can classify them as a beginner, elementary, per-intermediate, intermediate or as an advanced student in the language they’ve chosen to learn.</p>
+                    <p class="text-muted">Five level classes to provide a better learning / teaching atmosphere and a class that perfectly suits every student. After taking a placement test, students’ level can easily be determined and we can classify them as a beginner, elementary, pre intermediate, intermediate or as an advanced student in the language they’ve chosen to learn.</p>
                 </div>
             </div>
         </div>
@@ -291,8 +291,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Since 2015</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>Our Humble Beginning</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Since 2015 our school has been giving different language courses with a curriculum that helped students communicate effectively and grow passion for languages. Throughout the years, Bridge has been offering variety of language courses and special programs designed for both children and adults.</p>
@@ -305,7 +304,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">Everything we provide.</h4>
+                                    <h4 class="subheading">Everything we provide</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Bridge offer programs and courses in English, Amharic, French and many other local and foreign languages. The school gives variety of English courses in Academic English, Business English, English for Email and more. There are also different exam preparation programs for IELTS, SAT, TOEFL and other national and international English exam taking students.</p>
@@ -318,7 +317,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4 class="subheading">We try and meet yuor needs.</h4>
+                                    <h4 class="subheading">We Try To Meet Your Needs</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">People have different schedules and different amount of time available, so our school offers different forms of classes that enable customers to adjust and customize their schedules and effectively attend the courses.</p>
@@ -362,7 +361,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Our dedicated personells always ready to give you their best.</h3>
+                    <h3 class="section-subheading text-muted">Our dedicated personnel always ready to give you their best.</h3>
                 </div>
             </div>
             <div class="row">
