--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     <p>
                         ~English: General English, English for Email, Academic English, Business English, English for Hospitality <br>
                         ~French <br>
+                        ~Spanish <br>
                         ~Amharic <br>
                         ~Afan-Oromo <br>
                         ~Tigrigna <br>
