--- a/index.html
+++ b/index.html
@@ -658,23 +658,6 @@
               <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="" />
               <h4>Yennefer Teferi</h4>
               <p class="text-muted">Customer Service Officer</p>
-              <!-- <ul class="list-inline social-buttons">
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </li>
-                        </ul> -->
             </div>
           </div>
           <div class="col-sm-4">
@@ -682,6 +665,52 @@
               <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="" />
               <h4>Yodit Gebeyehu</h4>
               <p class="text-muted">Customer Service Manager</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="" />
+              <h4>Lynne Upton</h4>
+              <p class="text-muted">Teacher based in the UK</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="" />
+              <h4>Rob Rawlins</h4>
+              <p class="text-muted">Teacher based in the UK</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/6.jpg" alt="" />
+              <h4>Lauren Drachenberg</h4>
+              <p class="text-muted">Teacher based in USA</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/7.jpg" alt="" />
+              <h4>Megan Rahn </h4>
+              <p class="text-muted">Teacher based in USA</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/8.jpg" alt="" />
+              <h4>Nathaly Rodriguez</h4>
+              <p class="text-muted">Teacher based in USA</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/9.jpg" alt="" />
+              <h4>Jane Pinto </h4>
+              <p class="text-muted">Teacher based in USA</p>
             </div>
           </div>
         </div>
