Teacher profiles added

--- a/index.html
+++ b/index.html
@@ -713,6 +713,22 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/10.jpg" alt="" />
+              <h4>Aschalew Birhanu </h4>
+              <p class="text-muted">Teacher based in Addis Ababa</p>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/11.jpg" alt="" />
+              <h4>Alemayehu Anberbir </h4>
+              <p class="text-muted">Teacher based in Addis Ababa</p>
+            </div>
+          </div>
+        </div>
         <!-- <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
