Email address added

--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
             </div>
             <div>
               <p style="color: white; size: 20px">
-                Do You Have More Questions? Dial on: +251-920-00-00-77
+                Do You Have More Questions? Dial on: +251-920-00-00-77 or email us at info@bridgeschooloflanguages.com
               </p>
             </div>
           </div>
