--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
             <h3 class="section-subheading text-muted">
-              Bridge School of Languages.
+              Bridge School of Languages, a language school in Addis Ababa, Ethiopia.
             </h3>
           </div>
         </div>
@@ -802,7 +802,7 @@
         <div class="row align-items-center">
           <div class="col-md-4">
             <span class="copyright"
-              >Copyright &copy; www.bridgeschooloflanguages.com 2020</span
+              >Copyright &copy; www.bridgeschooloflanguages.com Addis Ababa, Ethiopia 2020</span
             >
           </div>
           <div class="col-md-4">
