Last name added

--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/12.jpg" alt="" />
-              <h4>David </h4>
+              <h4>David Young</h4>
               <p class="text-muted">Teacher based in Spain <br>
                 Between 1999 and 2011 David worked in Ethiopia, spending up to 6-months of each year in Addis Ababa.
                 There he worked with many small-scale craft producers to enable them to better fit their God-given creative gifts with the demands of the market, so helping them to improve their incomes.  David is now a CELTA qualified teacher and filmmaker, based in Spain. David has worked with Bridge as an editorial consultant and has also designed some of their publicity resources.
