--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="" />
+              <img class="mx-auto rounded-circle" src="img/team/3y.jpg" alt="" />
               <h4>Yodit Gebeyehu</h4>
               <p class="text-muted">Customer Service Manager</p>
             </div>
