Profile for Lynne and Rob added

--- a/index.html
+++ b/index.html
@@ -702,6 +702,7 @@
               <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="" />
               <h4>Lynne Upton</h4>
               <p class="text-muted">Teacher based in the UK</p>
+              <p class="text-muted">Based in London, Lynne has taught English online to students in London, Ethiopia, Brazil and Turkey and has studied a Teaching English course by Global English. She has a degree in English Language from Durham University. She used to work in Communications before having her three children.</p>
             </div>
           </div>
           <div class="col-sm-4">
@@ -709,6 +710,7 @@
               <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="" />
               <h4>Rob Rawlins</h4>
               <p class="text-muted">Teacher based in the UK</p>
+              <p class="text-muted">After working for the church, Rob changed career to English language teaching. He taught in London colleges and started his own school. He retired in 2014 and came to Addis with his wife to start Bridge, this school. He is so pleased to see it continue under Abay's leadership. He likes helping from London by zoom teaching. He also zoom teaches to Brazil and Turkey. He was born in Zambia and lived his first 16 years there.</p>
             </div>
           </div>
           <div class="col-sm-4">
