--- a/index.html
+++ b/index.html
@@ -679,6 +679,7 @@
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="" />
               <h4>Abayneh Haile</h4>
               <p class="text-muted">Director of Studies</p>
+              <p class="text-muted">Abayneh is the owner and director of Bridge School of Languages. He is passionate about education. He has worked in the education sector for 20 years in different capacities. He has worked for British Council as Facilitator, Programme Manager and Consultant. He has also worked for Transform ELT and Teach For Ethiopia as a consultant. He has delivered short term training in many countries in Africa and beyond. He has an MA from Leeds University, UK in Teacher Education. He is also CELTA qualified to teach adults. He is serving as President of the Ethiopian English Language Professionals’ Association. Abayneh loves teaching as well as learning!</p>
             </div>
           </div>
           <div class="col-sm-4">
@@ -716,31 +717,9 @@
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/6.jpg" alt="" />
-              <h4>Lauren Drachenberg</h4>
+              <h4>Ruth Derrick</h4>
               <p class="text-muted">Teacher based in USA</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/7.jpg" alt="" />
-              <h4>Megan Rahn </h4>
-              <p class="text-muted">Teacher based in USA</p>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/8.jpg" alt="" />
-              <h4>Nathaly Rodriguez</h4>
-              <p class="text-muted">Teacher based in USA</p>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/9.jpg" alt="" />
-              <h4>Jane Pinto </h4>
-              <p class="text-muted">Teacher based in USA</p>
+              <p class="text-muted">Ruth Derrick is the Associate Director of Global Partners for Education. She has a Master’s Degree in English. She has taught a variety of courses at the university level, has taught classes in Asia and Africa, as well as online courses to both children and college students. She sees education as a path to opening doors for students of all ages, and she desires to help others achieve their professional educational goals.</p>
             </div>
           </div>
         </div>
