Ruth image added

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/6.jpg" alt="" />
+              <img class="mx-auto rounded-circle" src="img/team/6n.jpg" alt="" />
               <h4>Ruth Derrick</h4>
               <p class="text-muted">Teacher based in USA</p>
               <p class="text-muted">Ruth Derrick is the Associate Director of Global Partners for Education. She has a Master’s Degree in English. She has taught a variety of courses at the university level, has taught classes in Asia and Africa, as well as online courses to both children and college students. She sees education as a path to opening doors for students of all ages, and she desires to help others achieve their professional educational goals.</p>
