--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
             Welcome To Bridge School of Languages!
           </div>
           <div class="intro-heading text-uppercase">
-            WE HAVE PASSION FOR LANGUAGES!!
+            WE HAVE PASSION FOR LANGUAGES AND COMMUNICATION!!
           </div>
           
-          <div class="animate intro-lead-in">EXCELLENCE IN LANGUAGE EDUCATION!</div>
+          <div class="animate intro-lead-in">EXCELLENCE IN LANGUAGE EDUCATION AND COMMUNICATION!</div>
           <a
             class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
             href="#services"
