Image size changes and button added under each descriptor

--- a/index.html
+++ b/index.html
@@ -340,6 +340,12 @@
             <div class="portfolio-caption">
               <h4>Presentation Skills</h4>
               <p class="text-muted">The Essentials</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal1"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -362,6 +368,12 @@
             <div class="portfolio-caption">
               <h4>Presentation Skills</h4>
               <p class="text-muted">Beyond the Essentials</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal2"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -384,6 +396,12 @@
             <div class="portfolio-caption">
               <h4>Communication</h4>
               <p class="text-muted">Writing to get your Message Across</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal3"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -406,6 +424,12 @@
             <div class="portfolio-caption">
               <h4>Communication</h4>
               <p class="text-muted">Writing beyond the essentials</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal4"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -428,6 +452,12 @@
             <div class="portfolio-caption">
               <h4>Meeting Skills</h4>
               <p class="text-muted">Leading a meeting: getting the best results</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal5"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -450,6 +480,12 @@
             <div class="portfolio-caption">
               <h4>Negotiation Skills </h4>
               <p class="text-muted">The Essentials</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal6"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -472,6 +508,12 @@
             <div class="portfolio-caption">
               <h4>Leadership Skills</h4>
               <p class="text-muted"> Be what every team needs</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal7"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
 
             </div>
           </div>
@@ -495,6 +537,12 @@
             <div class="portfolio-caption">
               <h4>Public Speaking and Special Occasion Speeches</h4>
               <p class="text-muted">Seeing the best of you!</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal8"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -517,6 +565,12 @@
             <div class="portfolio-caption">
               <h4>Get that job!</h4>
               <p class="text-muted">interview and job application skills</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal9"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -539,6 +593,12 @@
             <div class="portfolio-caption">
               <h4>Administration skills</h4>
               <p class="text-muted">Making things work</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal10"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -561,6 +621,12 @@
             <div class="portfolio-caption">
               <h4>Customer Service</h4>
               <p class="text-muted">Personal effectiveness: making a difference</p>
+              <a
+              data-toggle="modal"
+              href="#portfolioModal11w"
+            >
+            <button type="button" class="btn btn-success">Detail</button>
+              </a>
             </div>
           </div>
         </div>
