--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
       </div>
     </div>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-interval="false">
       <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" class="active"></li>
+        <li data-target="#carouselExampleIndicators" ></li>
+        <li data-target="#carouselExampleIndicators" ></li>
+        <li data-target="#carouselExampleIndicators" ></li>
+        <li data-target="#carouselExampleIndicators" ></li>
       </ol>
       <div class="carousel-inner" style="
-            background-color: #f8f9fa;
+            background-color: #dce1e6a1;
             padding-left: 10%;
             padding-right: 10%;
             padding-top: 60px;
