--- a/index.html
+++ b/index.html
@@ -797,6 +797,8 @@
 
             <div class="text-center text-md-left" style="margin-left: 6%;">
               <button class="btn btn-primary" type="submit">Send</button>
+              
+              <button class="btn btn-danger" type="reset">Clear</button>
             </div>
             <div class="status"></div>
 
